--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -544,6 +544,24 @@ destination to be. When we create our link, we simply reference the name of our 
 preceded by a pound sign in place of a traditional URL.</p>
 		</details>
 		
+		<details>
+			<summary>
+		<b>Chapter 13: Tables</b>
+			</summary>
+			<p>Tables are a method of formatting the content of your page, and are very similar to the
+			concept of a spreadsheet. Tables are composed of rows and columns. Each intersection of
+			the two is referred to as a cell, and is where content is placed. The number of columns and
+			rows you use depends on your need and design.</p>
+			
+			<p>You will probably find a great number of sites that rely heavily on tables to create the
+			look and feel of their pages. Recognizing I have already admitted to doing this in the past
+			when necessary, I will repeat my earlier statement: Please, do not.</p>
+			
+			<p></p>
+			<p></p>
+			<p></p>
+		</details>
+		
 		<p>The W3C built <a href="https://validator.w3.org/">HTML</a> code walidator.</p>
 		<p><a title="Optional but oh so good" href="http://learn.shayhowe.com/html-css/getting-to-know-html/">Getting to Know HTML</a></p>
 		<p><a title="w3schools.com/tags" href="http://www.w3schools.com/tags/" target="_blank">HTML Tags</a></p>
