--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -583,6 +583,9 @@ preceded by a pound sign in place of a traditional URL.</p>
 			in a different manner is more difficult, or would
 			require a whole different page to accomplish.</p>
 			
+			<p>To create a table, we first need to define its
+				beginning and end with tags: <code>table /table</code></p>
+			<p></p>
 			<p></p>
 		</details>
 		
