--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -585,7 +585,23 @@ preceded by a pound sign in place of a traditional URL.</p>
 			
 			<p>To create a table, we first need to define its
 				beginning and end with tags: <code>table /table</code></p>
+			
+			<p>Next, we can define our heading row by adding our row tags (tr) and nesting dividing
+			tags to represent our columns. Since we want items in this row to be recognized as head-
+			ings, we use the (th) tag for table heading:</p>
+			
+			<p>To add content to our table, we repeat the process using <code>td</code> (for table division) instead
+			of <code>th</code> to represent a regular cell of data. Each repetition will add a new row of data to our
+			table.</p>
+			
+			<p>To build on our example, we will let the first column also be headings, which will repre-
+			sent each row. To do this we use <code>th</code> as the first set of tags in each row. We can add a few
+			names as regular content using table division tags as well:</p>
+			
 			<p></p>
+			
+			<p></p>
+			
 			<p></p>
 		</details>
 		
