--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -598,6 +598,9 @@ preceded by a pound sign in place of a traditional URL.</p>
 			sent each row. To do this we use <code>th</code> as the first set of tags in each row. We can add a few
 			names as regular content using table division tags as well:</p>
 			
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/table1_zpsliuxm644.gif"
+			     alt="Table" title="Table">
+			
 			<p></p>
 			
 			<p></p>
