--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -601,9 +601,19 @@ preceded by a pound sign in place of a traditional URL.</p>
 			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/table1_zpsliuxm644.gif"
 			     alt="Table" title="Table">
 			
-			<p></p>
+			<p><b>Spanning</b><br>
+			Using tables to separate several smaller pieces of content horizontally within a layout
+			element is still generally accepted, and is easier than styling divs, but it is still considered a
+			less than ideal approach.</p>
 			
-			<p></p>
+			<p>As we create more complicated table layouts, we may want to merge some of these
+			fields together. We can create “extra-large” cells by adding colspan and divspan attributes
+			to the dividing tab (th or td). A colspan value of 2, for example, means the cell will fill two
+			horizontal blocks (left to right) of the table. Likewise, a rowspan of two means the cell will fill 
+			two row’s worth of space in the column(s) it occupies, as in this example showing
+			staffing for part of a week:</p>
+			
+			<img>
 			
 			<p></p>
 		</details>
