--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -613,7 +613,8 @@ preceded by a pound sign in place of a traditional URL.</p>
 			two row’s worth of space in the column(s) it occupies, as in this example showing
 			staffing for part of a week:</p>
 			
-			<img>
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/table2_zpsfoskvx4t.gif"
+			     alt="table span" title="Table Span">
 			
 			<p></p>
 		</details>
