--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -616,7 +616,14 @@ preceded by a pound sign in place of a traditional URL.</p>
 			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/table2_zpsfoskvx4t.gif"
 			     alt="table span" title="Table Span">
 			
-			<p></p>
+			<p>Keep in mind that spans always move from left to right for columns and top to bottom
+			for rows, starting with the cell you place the attribute in. Your values for the span must
+			always be positive, and larger than zero.</p>
+			
+			<p>While these examples outline where table cell edges are with dotted lines, we can se-
+			lectively enable these borders through cell attributes and/or through CSS styling. The best
+			approach is to keep these visual changes in CSS, preserving the structure/style separation
+			of duties between our HTML and CSS, making future visual changes easier to maintain.</p>
 		</details>
 		
 		<p>The W3C built <a href="https://validator.w3.org/">HTML</a> code walidator.</p>
