--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -538,10 +538,10 @@ browser window we are already using. The attribute can take any of the following
 define that location.</p>
 			
 			<p><b>Within the Page</b><br>
-We can add links to a page that move the user around the page itself, which is useful
-on pages with long content. To do this, we use an anchor tag to define where we want our
-destination to be. When we create our link, we simply reference the name of our anchor,
-preceded by a pound sign in place of a traditional URL.</p>
+			We can add links to a page that move the user around the page itself, which is useful
+			on pages with long content. To do this, we use an anchor tag to define where we want our
+			destination to be. When we create our link, we simply reference the name of our anchor,
+			preceded by a pound sign in place of a traditional URL.</p>
 		</details>
 		
 		<details>
@@ -584,7 +584,7 @@ preceded by a pound sign in place of a traditional URL.</p>
 			require a whole different page to accomplish.</p>
 			
 			<p>To create a table, we first need to define its
-				beginning and end with tags: <code>table /table</code></p>
+			beginning and end with tags: <code>table /table</code></p>
 			
 			<p>Next, we can define our heading row by adding our row tags (tr) and nesting dividing
 			tags to represent our columns. Since we want items in this row to be recognized as head-
@@ -627,6 +627,26 @@ preceded by a pound sign in place of a traditional URL.</p>
 			<hr>
 		</details>
 		
+		<details>
+			<summary>
+		<b>Chapter 16: Media Support</b>
+			</summary>
+			<p><b>Video</b><br>The abundance of audio and video material on the internet grew over time as bandwidth
+			improved and storage space became cheaper and ubiquitous. Through this time, many ap-
+			proaches were brought forward to facilitate enjoying the material. Software, file extensions,
+			browser add-ons and more attempted to fill the void. Now, HTML5 has added both audio
+			and video tags to make it easier to integrate media into our pages. These tags make embed-
+			ding media easier, but (so far) are limited in the number of file formats they support.</p>
+			
+			<p></p>
+			
+			<p></p>
+			
+			<p></p>
+			
+			<p></p>
+		</details>
+			
 		<p>The W3C built <a href="https://validator.w3.org/">HTML</a> code walidator.</p>
 		<p><a title="Optional but oh so good" href="http://learn.shayhowe.com/html-css/getting-to-know-html/">Getting to Know HTML</a></p>
 		<p><a title="w3schools.com/tags" href="http://www.w3schools.com/tags/" target="_blank">HTML Tags</a></p>
