--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -638,9 +638,16 @@ define that location.</p>
 			and video tags to make it easier to integrate media into our pages. These tags make embed-
 			ding media easier, but (so far) are limited in the number of file formats they support.</p>
 			
-			<p></p>
+			<p>Our new video tag supports a number of features through attributes like automatically
+			playing (autoplay), looping the file (looping), on screen controls (controls), preloading the
+			video before it is played (preload), error handling (onerror), and even displaying an image
+			when the file is not in use (poster) and also includes width, height, and source attributes of
+			the file.</p>
 			
-			<p></p>
+			<p>The video files we wish to use must be in the OGG format, which is an open source
+			video format. We define our video very similarly to other elements we take into our page.
+			An initial video that simply plays when the page is loaded can be completed by adding the
+			following: <code>video src="ourfile.ogg" width="200" height="150" autoplay</code></p>
 			
 			<p></p>
 			
