--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -662,6 +662,20 @@ define that location.</p>
 			identical to this approach (even the use of .ogg files) with exception to the ability to define
 			the width and height. All we need to change is our vocabulary, using the word audio instead
 			of video in our tag.</p>
+			
+			<p><b>Audio</b><br>
+				<code>audio src="ourAudio.ogg" autoplay controls preload="auto"</code></p>
+			
+			<p>The use of audio in a site can add a number of effects, from background music (be
+			kind—allow the user to stop it if they want), to little noises that aid in navigation (these
+			might interfere with screen readers) to embedded players that allow the user to select and
+			play a particular audio file.</p>
+			
+			<p></p>
+			
+			<p></p>
+			
+			<p></p>
 		</details>
 			
 		<p>The W3C built <a href="https://validator.w3.org/">HTML</a> code walidator.</p>
