--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -624,7 +624,7 @@ define that location.</p>
 			lectively enable these borders through cell attributes and/or through CSS styling. The best
 			approach is to keep these visual changes in CSS, preserving the structure/style separation
 			of duties between our HTML and CSS, making future visual changes easier to maintain.</p>
-			<hr>
+			
 		</details>
 		
 		<details>
@@ -671,11 +671,23 @@ define that location.</p>
 			might interfere with screen readers) to embedded players that allow the user to select and
 			play a particular audio file.</p>
 			
-			<p></p>
+			<p>Like image formats, audio files can be encoded in a variety of formats that provide dif-
+			ferent levels of quality. The two formats most commonly found are .mp3 and .wav, standing
+			for motion picture extract group (3rd set of standards) and wave, respectively. The difference
+			lies in their method of compressing and storing the information needed to reproduce the
+			sound. MP3 files are more compressed, meaning they are smaller and require less time and
+			space to transmit, but contain less information and as such have a lower audio quality. Wave
+			files, on the other hand, are typically much larger and sound better. This means they are
+			more taxing on a website as they require more storage space and will take longer to load.</p>
 			
-			<p></p>
-			
-			<p></p>
+			<p>Which format you use will obviously depend on what is more important to you—speed
+			of delivery and space, or quality of sound for the user. Some things to take into consider-
+			ation are that most users report hearing little difference in quality between the formats,
+			especially when the file is played on a mobile device or computer with basic entry-level
+			speakers attached. If you have ever purchased a digital album or single online, you may have
+			been presented with the option between these or other formats to accommodate the more
+			discerning audiophiles among us.</p>
+			<hr>
 		</details>
 			
 		<p>The W3C built <a href="https://validator.w3.org/">HTML</a> code walidator.</p>
