--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -686,10 +686,28 @@ define that location.</p>
 			especially when the file is played on a mobile device or computer with basic entry-level
 			speakers attached. If you have ever purchased a digital album or single online, you may have
 			been presented with the option between these or other formats to accommodate the more
-			discerning audiophiles among us.</p>
-			<hr>
+			discerning audiophiles among us.</p>			
 		</details>
+		
+		<details>
+			<summary>
+		<b>Chapter 18: Tags to Avoid</b>
+			</summary>
+			<p>Now that we have focused on the new features of HTML5 and warned about the inef-
+			ficient methods developers resorted to in the past, let us take a look at a few other tags and
+			methods to avoid using in our code.While some of these are already deprecated, not all
+			are, and they all take away from our goals of separating structure from style and responsive
+			design.</p>
 			
+			<h4><code>b, i, strong</code></h4>			
+			<p>All of these place emphasis on text, and can be replaced with CSS. Using these within
+			your code means a change to your CSS style will not necessarily determine whether or not
+			the style of text is affected for content wrapped in these tags. It also means you have to edit
+			style in two places, both your CSS and HTML files.</p>
+			
+			<p></p>
+		</details>
+		
 		<p>The W3C built <a href="https://validator.w3.org/">HTML</a> code walidator.</p>
 		<p><a title="Optional but oh so good" href="http://learn.shayhowe.com/html-css/getting-to-know-html/">Getting to Know HTML</a></p>
 		<p><a title="w3schools.com/tags" href="http://www.w3schools.com/tags/" target="_blank">HTML Tags</a></p>
