--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -705,7 +705,22 @@ define that location.</p>
 			the style of text is affected for content wrapped in these tags. It also means you have to edit
 			style in two places, both your CSS and HTML files.</p>
 			
-			<p></p>
+			<h3><code>font</code></h3>
+			<p>Again, we can control font (with even more control) using CSS, and hard coding your
+			font into your page can override what you wanted in your CSS.</p>
+			
+			<h3><code>br</code></h3>
+			<p>I know, I have (and will) use breaks in my examples. What I mean to discourage here is
+			using breaks as a quick fix when you should be using <p> or something more appropriate.
+			If another tag better identifies your content, but you do not want some of the automatic
+			styling that comes with the tag, we can override those attributes in our CSS, so use the best
+			tag for your content. We will see how to adjust it to your needs when we look at CSS later.</p>
+			
+			<h3>Styling Attributes</h3>
+			<p>Just like not using tags that style in our HTML, we should avoid using attributes that
+			affect page appearance as well, like aligning content, or applying borders, colors, and other
+			CSS elements.</p>
+			<hr>
 		</details>
 		
 		<p>The W3C built <a href="https://validator.w3.org/">HTML</a> code walidator.</p>
