add tags to avoid

--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -699,13 +699,13 @@ define that location.</p>
 			are, and they all take away from our goals of separating structure from style and responsive
 			design.</p>
 			
-			<h3><code>b, i, strong</code></h3>			
+			<h4><code>b, i, strong</code></h4>			
 			<p>All of these place emphasis on text, and can be replaced with CSS. Using these within
 			your code means a change to your CSS style will not necessarily determine whether or not
 			the style of text is affected for content wrapped in these tags. It also means you have to edit
 			style in two places, both your CSS and HTML files.</p>
 			
-			<h3><code>font</code></h3>
+			<h4><code>font</code></h4>
 			<p>Again, we can control font (with even more control) using CSS, and hard coding your
 			font into your page can override what you wanted in your CSS.</p>
 			
@@ -882,6 +882,19 @@ define that location.</p>
 				     alt="Caption" title="Caption" width="800">
 				<figcaption>
 						Table Caption
+				</figcaption>
+				</figure>
+		</details>
+		
+		<details>
+			<summary>
+				<b id="tags-to-avoid">Tags to Avoid</b>
+			</summary>
+				<figure>
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--DOM_zpsssoeqh1n.gif" 
+				     alt="The Document Object Model" title="The Document Object Model (DOM)" width="800">
+				<figcaption>
+						The Document Object Model (DOM)
 				</figcaption>
 				</figure>
 		</details>
