--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -32,6 +32,7 @@
 						<li><a href="#images">Images</a></li>
 						<li><a href="#multimedia">Multimedia</a></li>
 						<li><a href="#tables">Tables</a></li>
+						<li><a href="#usefultags">Useful Tags</a></li>
 					</ul>
 					</li>
 				</ul>
@@ -888,7 +889,7 @@ define that location.</p>
 		
 		<details>
 			<summary>
-				<b id="tags-to-avoid">Tags to Avoid</b>
+				<b id="usefultags">Useful Tags</b>
 			</summary>
 				<figure>
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--DOM_zpsssoeqh1n.gif" 
