--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -892,10 +892,10 @@ define that location.</p>
 				<b id="usefultags">Useful Tags</b>
 			</summary>
 				<figure>
-				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/Introductio-to-HTML5-by-UniversityofMichigan--DOM_zpsssoeqh1n.gif" 
-				     alt="The Document Object Model" title="The Document Object Model (DOM)" width="800">
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/Block%20tags_zpsr4ojopq0.gif" 
+				     alt="Block Tags" title="Block Tags" width="800">
 				<figcaption>
-						The Document Object Model (DOM)
+						Block Tags
 				</figcaption>
 				</figure>
 		</details>
