--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -898,6 +898,14 @@ define that location.</p>
 						Block Tags
 				</figcaption>
 				</figure>
+			
+				<figure>
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/Inline%20tags_zpsbzytqrem.gif" 
+				     alt="Inline Tags" title="Inline Tags" width="800">
+				<figcaption>
+						Inline Tags
+				</figcaption>
+				</figure>
 		</details>
 		<br>
 		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
