--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -906,6 +906,14 @@ define that location.</p>
 						Inline Tags
 				</figcaption>
 				</figure>
+			
+				<figure>
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/more%20tags_zpsufdlix0g.gif" 
+				     alt="More Tags" title="More Tags" width="800">
+				<figcaption>
+						More Tags
+				</figcaption>
+				</figure>
 		</details>
 		<br>
 		<p>Week Two -- Read before quiz <br>Chapters 7 (again), 9, 10, 11, 13, 16, 18</p>
