--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -910,6 +910,8 @@ define that location.</p>
 				<figure>
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/more%20tags_zpsufdlix0g.gif" 
 				     alt="More Tags" title="More Tags" width="800">
+				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/more%20tags2_zpsvsoqzp96.gif" 
+				     alt="More Tags2" title="More Tags2" width="800">
 				<figcaption>
 						More Tags
 				</figcaption>
