--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -909,7 +909,7 @@ define that location.</p>
 			
 				<figure>
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/more%20tags_zpsufdlix0g.gif" 
-				     alt="More Tags" title="More Tags" width="800">
+				     alt="More Tags" title="More Tags" width="800"><br>
 				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/more%20tags2_zpsvsoqzp96.gif" 
 				     alt="More Tags2" title="More Tags2" width="800">
 				<figcaption>
