--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -39,7 +39,7 @@
 					
 					<li><a href="#week3">Week Three</a>
 					<ul>
-						<li><a href="accessibility">Accessibility</a></li>
+						<li><a href="#accessibility">Accessibility</a></li>
 					</ul>
 					</li>
 					
