--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -937,12 +937,19 @@ define that location.</p>
 		<h3 id="accessibility">Accessibility</h3>
 		
 		<figure>
-				<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/accessibility%20coordinator_zpslpk4wpxb.gif" 
-				     alt="Accessibility coordinator" title="Accessibility coordinator" width="800">
-				<figcaption>
-						Accessibility coordinator
-				</figcaption>
-				</figure>
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/accessibility%20coordinator_zpslpk4wpxb.gif" 
+				alt="Accessibility coordinator" title="Accessibility coordinator" width="800">
+			<figcaption>
+				Accessibility coordinator
+			</figcaption>
+		</figure>
+		<figure>
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/what-is-web-accessibility_zpsihwv73cx.gif" 
+				alt="What is web accessibility" title="What is web accessibility" width="800">
+			<figcaption>
+				What is web accessibility?
+			</figcaption>
+		</figure>
 	</section>
 	<!-- week3 end -->
 		
