--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -951,7 +951,7 @@ define that location.</p>
 			</figcaption>
 		</figure>
 		<figure>
-			<img src="-UniversityofMichigan/what-is-web-accessibility_zpsihwv73cx.gifhttp://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/wave-webaim-org_zpsjmrs2cki.gif" 
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/wave-webaim-org_zpsjmrs2cki.gif" 
 				alt="wave.webaim.org" title="wave.webaim.org" width="800">
 			<figcaption>
 				<a href="http://wave.webaim.org/">wave.webaim.org</a>
