--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -957,6 +957,9 @@ define that location.</p>
 				<a href="http://wave.webaim.org/">wave.webaim.org</a>
 			</figcaption>
 		</figure>
+		
+		<h3 id="hosting">Hosting Your Site</h3>
+		<a href="https://byet.host/" title="byet.host">Free hosting</a>
 	</section>
 	<!-- week3 end -->
 		
