--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -933,9 +933,14 @@ define that location.</p>
 		
 	<!-- week3 begin -->	
 	<section>
-		<h2 id="week3">Week 3</h2>	
-		<h3 id="accessibility">Accessibility</h3>
+		<h2 id="week3">Week 3</h2>
 		
+		
+		<details>
+			<summary>
+		<b id="accessibility">Accessibility</b>
+			</summary>
+				
 		<figure>
 			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/accessibility%20coordinator_zpslpk4wpxb.gif" 
 				alt="Accessibility coordinator" title="Accessibility coordinator" width="800">
@@ -957,6 +962,7 @@ define that location.</p>
 				<a href="http://wave.webaim.org/">wave.webaim.org</a>
 			</figcaption>
 		</figure>
+		</details>
 		
 		<h3 id="hosting">Hosting Your Site</h3>
 		<a href="https://byet.host/" title="byet.host">Free hosting</a>
