--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -40,6 +40,7 @@
 					<li><a href="#week3">Week Three</a>
 					<ul>
 						<li><a href="#accessibility">Accessibility</a></li>
+						<li><a href="#hosting">Hosting Your Site</a></li>
 					</ul>
 					</li>
 					
@@ -930,7 +931,7 @@ define that location.</p>
 			
 	</section>
 	<!-- week2 end -->
-		
+		<hr>
 	<!-- week3 begin -->	
 	<section>
 		<h2 id="week3">Week 3</h2>
@@ -964,8 +965,17 @@ define that location.</p>
 		</figure>
 		</details>
 		
-		<h3 id="hosting">Hosting Your Site</h3>
-		<a href="https://byet.host/" title="byet.host">Free hosting</a>
+		
+		
+		<details>
+			<summary>
+		<b id="hosting">Hosting Your Site</b>
+			</summary>
+			<a href="https://byet.host/" title="byet.host">Free hosting</a>
+		</details>
+		
+		
+		
 	</section>
 	<!-- week3 end -->
 		
