--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -41,6 +41,7 @@
 					<ul>
 						<li><a href="#accessibility">Accessibility</a></li>
 						<li><a href="#hosting">Hosting Your Site</a></li>
+						<li><a href="#final-project">Final Project</a></li>
 					</ul>
 					</li>
 					
@@ -974,6 +975,16 @@ define that location.</p>
 			<a href="https://byet.host/" title="byet.host">Free hosting</a>
 		</details>
 		
+		
+		
+		
+		<details>
+			<summary>
+				<b id="final-project">Final Project</b>
+			</summary>
+			<img src="" alt="Final project" title="Final" widht="800">
+			<img src="" alt="Checklist" title="list" widht="800">
+		</details>
 		
 		
 	</section>
