--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -982,8 +982,10 @@ define that location.</p>
 			<summary>
 				<b id="final-project">Final Project</b>
 			</summary>
-			<img src="" alt="Final project" title="Final" widht="800">
-			<img src="" alt="Checklist" title="list" widht="800">
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/HTML5project_zpsariteeja.png" 
+			     alt="Final project" title="Final" widht="800">
+			<img src="http://i1126.photobucket.com/albums/l605/Yevgen_Farasevych/MOOCs/HTML5-by-UniversityofMichigan/fp2_zps1ljgauax.gif" 
+			     alt="Checklist" title="list" widht="800">
 		</details>
 		
 		
