--- a/Introduction-to-HTML5.html
+++ b/Introduction-to-HTML5.html
@@ -988,7 +988,8 @@ define that location.</p>
 			     alt="Checklist" title="list" widht="800">
 		</details>
 		
-		
+		<a href="https://www.youtube.com/watch?v=mbISbUJosbg&utm_medium=email&utm_source=other&utm_campaign=opencourse.nQ5d7TbQEeWW9BKhJ4xW0Q.opencourse.announcements~opencourse.nQ5d7TbQEeWW9BKhJ4xW0Q.courseBranchCompletion"
+		   title="Youtube">The Secret Lecture</a>
 	</section>
 	<!-- week3 end -->
 	<hr>	
