--- a/index.html
+++ b/index.html
@@ -29,6 +29,12 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href=""
+			   	alt="" target="_blank" 
+				title=""></a><br>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://events.yandex.ru/lib/talks/1922/"
+			   	alt="сайт с нуля на полном стеке БЭМ" target="_blank" 
+				title="БЭМ-технологии(посмотреть)"><b>Мастер-класс: Разрабатываем сайт с нуля на полном стеке БЭМ-технологий</b></a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://wave.webaim.org/"
 			   	alt="wave.webaim.org" target="_blank" 
 				title="wave.webaim.org (2016-12-04)">wave.webaim.org (проверка на доступность)</a><br>
