--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 	
-	<ul><h2>MOOC</h2>	
+	<h2>MOOC</h2>	
 		<ul>
 			<li><b>Full Stack WEB Development</b> by Hong Kong University of Science and Technology
 				<ul>
@@ -22,7 +22,7 @@
 			</li>
 			<li><a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a></li>				
 		</ul>		
-	</ul>
+	
 	<ul><h2>WEB dev log</h2>
 		<ul>
 		<details open>
