--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@
 </head>
 <body>
 	
+	<header>
+	
+	</header>
+	
+		
 	<h2>MOOC</h2>	
 		<ul>
 			<li><b>Full Stack WEB Development</b> by Hong Kong University of Science and Technology
