--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 			<li><a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a></li>				
 		</ul>		
 	
-	<ul><h2>WEB dev log</h2>
+	<h2>WEB dev log</h2>
 		<ul>
 		<details open>
 			<summary>
@@ -88,8 +88,8 @@
 			   	alt="Доступность сайтов для самых маленьких" target="_blank" title="Перевод на medium.com">Доступность сайтов для самых маленьких</a>
 		</details>
 		</ul>
-	</ul>
-	<ul><h2>Websites</h2>	
+	
+	<h2>Websites</h2>	
 		<ul>
 			<li><a href="http://kwambio.com/" title="kwambio.com (2016-11-30)" target="_blank">kwambio.com</a></li>
 			<li><a href="http://simurai.com/" title="simurai.com (2016-11-29)" target="_blank">simurai.com</a></li>
@@ -98,6 +98,6 @@
 						
 							
 		</ul>		
-	</ul>
+	
 </body>
 </html>
