--- a/index.html
+++ b/index.html
@@ -13,11 +13,15 @@
 <body>
 	
 	<header class="header">
-		<h1></h1>
+    		<h1>Home page</h1>
+    		<nav>
+			<a href="#mooc">MOOC</a>
+			<a href="#web-dev-log">WEB dev log</a>
+			<a href="#websites">Websites</a>			
+    		</nav>
 	</header>
-	
 		
-	<h2>MOOC</h2>	
+	<h2 id="mooc">MOOC</h2>	
 		<ul>
 			<li><b>Full Stack WEB Development</b> by Hong Kong University of Science and Technology
 				<ul>
@@ -28,7 +32,7 @@
 			<li><a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a></li>				
 		</ul>		
 	
-	<h2>WEB dev log</h2>
+	<h2 id="web-dev-log">WEB dev log</h2>
 		<ul>
 		<details open>
 			<summary>
@@ -89,7 +93,7 @@
 		</details>
 		</ul>
 	
-	<h2>Websites</h2>	
+	<h2 id="websites">Websites</h2>	
 		<ul>
 			<li><a href="http://kwambio.com/" title="kwambio.com (2016-11-30)" target="_blank">kwambio.com</a></li>
 			<li><a href="http://simurai.com/" title="simurai.com (2016-11-29)" target="_blank">simurai.com</a></li>
