--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
 			<a href="#web-dev-log">WEB dev log</a>
 			<a href="#websites">Websites</a>			
     		</nav>
-	</header>
-		
-	<h2 id="mooc">MOOC</h2>	
+		</header>		
+	
+	
+	<section id="mooc">
+		<h2>MOOC</h2>	
 		<ul>
 			<li><b>Full Stack WEB Development</b> by Hong Kong University of Science and Technology
 				<ul>
@@ -31,8 +33,11 @@
 			</li>
 			<li><a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a></li>				
 		</ul>		
+		</section>
 	
-	<h2 id="web-dev-log">WEB dev log</h2>
+	
+	<section id="web-dev-log"> 
+		<h2>WEB dev log</h2>
 		<ul>
 		<details open>
 			<summary>
@@ -92,8 +97,11 @@
 			   	alt="Доступность сайтов для самых маленьких" target="_blank" title="Перевод на medium.com">Доступность сайтов для самых маленьких</a>
 		</details>
 		</ul>
+		</section>
 	
-	<h2 id="websites">Websites</h2>	
+	
+	<section id="websites">
+		<h2>Websites</h2>	
 		<ul>
 			<li><a href="http://kwambio.com/" title="kwambio.com (2016-11-30)" target="_blank">kwambio.com</a></li>
 			<li><a href="http://simurai.com/" title="simurai.com (2016-11-29)" target="_blank">simurai.com</a></li>
@@ -102,6 +110,11 @@
 						
 							
 		</ul>		
+		</section>
+	
+	
+	<footer>
+		</footer>
 	
 </body>
 </html>
