--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
 	<meta name="author" content="Yevgen Farasevych">
 	<title>Home page</title>
 	
-	<style type="text/css">		
+	<style type="text/css">
+		.header {
+			background-color: grey;
+		}
 	</style>
 </head>
 <body>
