--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 	
 	<style type="text/css">
 		.header {
-			background-color: grey;
+			background-color: blue;
+			text-align: center;
 		}
 	</style>
 </head>
