--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
 	
 	<style type="text/css">
 		.header {
-			background-color: blue;
+			background-color: ;
 			text-align: center;
+		}
+		
+		.main {
+			background-color: #9a657b;
 		}
 	</style>
 </head>
-<body>
+<body class="main">
 	
 	<header class="header">
     		<h1>Home page</h1>
