--- a/index.html
+++ b/index.html
@@ -22,21 +22,23 @@
 		}
 	</style>
 </head>
-<body class="main">
-	
-	<header class="header">
-    		<h1>Home page</h1>
-    		<nav>
-			<a href="#mooc">MOOC</a>
-			<a href="#web-dev-log">WEB dev log</a>
-			<a href="#websites">Websites</a>			
-    		</nav>
+<body>
+	<!--BEGIN layout-->
+	<div class="layout">
+		<!--BEGIN header-->	
+		<header class="header">
+    		  <h1>Home page</h1>
+    		    <nav>
+		      <a href="#mooc">MOOC</a>
+		      <a href="#web-dev-log">WEB dev log</a>
+		      <a href="#websites">Websites</a>			
+		    </nav>
 		</header>		
-	
-	
-	<section id="mooc">
-		<h2>MOOC</h2>	
-		<ul>
+		<!--END header-->
+		<!--BEGIN mooc-->
+		<section id="mooc" class="section mooc">
+		  <h2>MOOC</h2>	
+		  <ul>
 			<li><b>Full Stack WEB Development</b> by Hong Kong University of Science and Technology
 				<ul>
 				<li><a href="dating-website.html">Dating Website</a></li>
@@ -46,7 +48,7 @@
 			<li><a href="Introduction-to-HTML5.html"><b>Introduction to HTML5</b> by University of Michigan</a></li>				
 		</ul>		
 		</section>
-	
+		<!--END mooc-->
 	
 	<section id="web-dev-log"> 
 		<h2>WEB dev log</h2>
@@ -127,6 +129,7 @@
 	
 	<footer>
 		</footer>
-	
+	</div>
+	<!--END layout-->
 </body>
 </html>
