--- a/index.html
+++ b/index.html
@@ -113,23 +113,27 @@
 		</ul>
 		</section>
 	
-	
-	<section id="websites">
-		<h2>Websites</h2>	
-		<ul>
-			<li><a href="http://kwambio.com/" title="kwambio.com (2016-11-30)" target="_blank">kwambio.com</a></li>
-			<li><a href="http://simurai.com/" title="simurai.com (2016-11-29)" target="_blank">simurai.com</a></li>
-			<li><a href="http://rog.ie/" title="rog.ie (2016-11-29)" target="_blank">rog.ie</a></li>
-			<li><a href="http://riverco.de/" title="Coderiver (2016-11-28)" target="_blank">riverco.de</a></li>
-						
-							
-		</ul>		
-		</section>
-	
-	
-	<footer>
-		</footer>
+       <!--BEGIN websites-->
+       <section id="websites" class="section">
+	<div class="7">	      
+	  <h2>Websites</h2>	
+	  <ul>
+	    <li><a href="http://kwambio.com/" title="kwambio.com (2016-11-30)" target="_blank">kwambio.com</a></li>
+	    <li><a href="http://simurai.com/" title="simurai.com (2016-11-29)" target="_blank">simurai.com</a></li>
+	    <li><a href="http://rog.ie/" title="rog.ie (2016-11-29)" target="_blank">rog.ie</a></li>
+	    <li><a href="http://riverco.de/" title="Coderiver (2016-11-28)" target="_blank">riverco.de</a></li>							
+          </ul>
 	</div>
-	<!--END layout-->
+      </section>
+      <!--END websites-->
+      <!--BEGIN footer-->
+      <footer class="footer">
+        <div class="7">
+          <p>Copyright © 2016 All rights reserved.</p>
+        </div>
+      </footer>
+      <!--END footer-->
+    </div>
+    <!--END layout-->
 </body>
 </html>
