--- a/index.html
+++ b/index.html
@@ -13,7 +13,11 @@
 			text-align: center;
 		}
 		
-		.layout {
+		.footer {
+			text-align: center;
+		}
+		
+		body {
 			background-color: #cbecdf;
 		}
 		
