add link to CSS Flexible Box Layout Module Level 1

--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
 			<summary>
 				<b>2016</b>
 			</summary>
-			&nbsp;&nbsp;&nbsp;&nbsp;<a href=""
-			   	alt="" target="_blank" 
-				title=""></a><br>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://drafts.csswg.org/css-flexbox/"
+			   	alt="CSS Flexible Box Layout" target="_blank" 
+				title="CSS Flexible Box Layout Module Level 1 (reed)"><b>CSS Flexible Box Layout Module Level 1</b></a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://events.yandex.ru/lib/talks/1922/"
 			   	alt="сайт с нуля на полном стеке БЭМ" target="_blank" 
 				title="БЭМ-технологии(посмотреть)"><b>Мастер-класс: Разрабатываем сайт с нуля на полном стеке БЭМ-технологий</b></a><br>
