--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 				title="CSS Flexible Box Layout Module Level 1 (reed)"><b>CSS Flexible Box Layout Module Level 1</b></a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://events.yandex.ru/lib/talks/1922/"
 			   	alt="сайт с нуля на полном стеке БЭМ" target="_blank" 
-				title="БЭМ-технологии(посмотреть)"><b>Мастер-класс: Разрабатываем сайт с нуля на полном стеке БЭМ-технологий</b></a><br>
+				title="БЭМ-технологии(посмотреть)"><b>Мастер-класс: Разрабатываем сайт с нуля на полном стеке БЭМ-технологий(video)</b></a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://wave.webaim.org/"
 			   	alt="wave.webaim.org" target="_blank" 
 				title="wave.webaim.org (2016-12-04)">wave.webaim.org (проверка на доступность)</a><br>
