--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 	<div class="layout">
 		<!--BEGIN header-->	
 		<header class="header">
-    		  <h1>Home page</h1>
+    		  <h1><a href="/" class="logo">Home Page</a></h1>
     		    <nav>
 		      <a href="#mooc">MOOC</a>
 		      <a href="#web-dev-log">WEB dev log</a>
