--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Home page</title>
 	
 	<style type="text/css">
-		.header {
+		.header a {
 			background-color: ;
 			text-align: center;
 			text-decoration: none;
