--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<title>Home page</title>
 	
 	<style type="text/css">
-		.header a {
+		.header {
 			background-color: ;
 			text-align: center;
 			text-decoration: none;
@@ -24,6 +24,12 @@
 		
 		a {
 			color: black;
+			
+    			text-decoration: none; /* Убираем подчеркивание у ссылок */
+		}
+   	
+		a:hover { 
+    			text-decoration: underline; /* Добавляем подчеркивание при наведении курсора мыши на ссылку */
 		}
 	</style>
 </head>
