--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     		  <h1><a href="/" class="logo">Home Page</a></h1>
     		    <nav>
 		      <a href="#mooc">MOOC</a>
-		      <a href="#web-dev-log">WEB dev log</a>
+		      <a href="#web-dev-log">WebDevLog</a>
 		      <a href="#websites">Websites</a>			
 		    </nav>
 		</header>		
