--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 		}
    	
 		a:hover { 
-    			text-decoration: underline; /* Добавляем подчеркивание при наведении курсора мыши на ссылку */
+    			cursor:pointer; 
 		}
 	</style>
 </head>
