--- a/index.html
+++ b/index.html
@@ -23,13 +23,17 @@
 		}
 		
 		a {
-			color: black;
+			
 			
     			text-decoration: none; /* Убираем подчеркивание у ссылок */
 		}
    	
 		a:hover { 
     			cursor:pointer; 
+		}
+		
+		.logo {
+			color: black;
 		}
 	</style>
 </head>
