--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
 			text-decoration: none;
 		}
 		
+		header h1 a {
+			
+			text-decoration: none;
+		}
+		
 		.footer {
 			text-align: center;
 		}
