--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://davidwalsh.name/chris-coyiers-favorite-pens"
+			   	alt="CodePen Demos" target="_blank" 
+				title="CodePen Demos (2016-12-07)">Chris Coyier’s Favorite CodePen Demos</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://drafts.csswg.org/css-flexbox/"
 			   	alt="CSS Flexible Box Layout" target="_blank" 
 				title="CSS Flexible Box Layout Module Level 1 (reed)"><b>CSS Flexible Box Layout Module Level 1</b></a><br>
