--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://berlincodeofconduct.org/"
+			   	alt="BERLIN CODE OF CONDUCT" target="_blank" 
+				title="BERLIN CODE OF CONDUCT (2016-12-07)">BERLIN CODE OF CONDUCT</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://davidwalsh.name/chris-coyiers-favorite-pens"
 			   	alt="CodePen Demos" target="_blank" 
 				title="CodePen Demos (2016-12-07)">Chris Coyier’s Favorite CodePen Demos</a><br>
