--- a/index.html
+++ b/index.html
@@ -80,6 +80,12 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://timpietrusky.com/"
+			   	alt="timpietrusky.com" target="_blank" 
+				title="timpietrusky.com (2016-12-07)">timpietrusky.com/</a><br>			
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://codepen.io/TimPietrusky/pen/Kazcy"
+			   	alt="TimPietrusky" target="_blank" 
+				title="TimPietrusky (2016-12-07)">codepen.io/TimPietrusky</a><br>
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://berlincodeofconduct.org/"
 			   	alt="BERLIN CODE OF CONDUCT" target="_blank" 
 				title="BERLIN CODE OF CONDUCT (2016-12-07)">BERLIN CODE OF CONDUCT</a><br>
