--- a/index.html
+++ b/index.html
@@ -80,9 +80,15 @@
 			<summary>
 				<b>2016</b>
 			</summary>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://www.codewars.com/"
+			   	alt="codewars.com" target="_blank" 
+				title="codewars.com (2016-12-08)">Achieve mastery through challenge on codewars.com</a><br>
+			&nbsp;&nbsp;&nbsp;&nbsp;<a href="https://vc.ru/p/csssr-programming"
+			   	alt="Куда пойти учиться программисту" target="_blank" 
+				title="Куда пойти учиться программисту (2016-12-08)">Куда пойти учиться программисту: советы опытного тимлида, преподавателя и новичка</a><br>	
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://timpietrusky.com/"
 			   	alt="timpietrusky.com" target="_blank" 
-				title="timpietrusky.com (2016-12-07)">timpietrusky.com/</a><br>			
+				title="timpietrusky.com (2016-12-07)">timpietrusky.com</a><br>			
 			&nbsp;&nbsp;&nbsp;&nbsp;<a href="http://codepen.io/TimPietrusky/pen/Kazcy"
 			   	alt="TimPietrusky" target="_blank" 
 				title="TimPietrusky (2016-12-07)">codepen.io/TimPietrusky</a><br>
