--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
     		    <nav>
 		      <a href="#mooc">MOOC</a>
 		      <a href="#web-dev-log">WebDevLog</a>
-		      <a href="#websites">Websites</a>			
+		      <a href="#websites">Websites</a>
+		      <a href="#learning">Learning</a>
 		    </nav>
 		</header>		
 		<!--END header-->
@@ -153,7 +154,7 @@
 		</details>
 		</ul>
 		</section>
-	
+		
        <!--BEGIN websites-->
        <section id="websites" class="section">
 	<div class="7">	      
@@ -167,6 +168,27 @@
 	</div>
       </section>
       <!--END websites-->
+      <!--BEGIN learning-->
+      <section id="learning">
+        <div class="7">
+	  <h2>Learning</h2>
+          <article>
+	    <p>Есть три составляющих обучения - знания, умения, навыки.</p>
+	    <p>Знания - это то, что вы получаете на уроках (видео или офлайн) и то, что у вас остается в мозгу. 
+		 Самая ненадежная структура. Если не подкреплять, то через пару дней от знаний ничего не останется.</p>
+	    <p>Умения - это когда вы с помощью знаний можете что-то сделать. Можете применить знания. Поэтому практика очень важна.</p>
+	    <p>Навык - это умение, доведенное до автоматизма. На этом этапе вы становитесь программистом. 
+			Требует много практики. Очень много.</p>
+	    <p>Пройдете весь путь ЗУН - будет счастье.</p>
+	    <p>Есть еще 4 составляющая обучения - информация. Она стоит до знаний. Информацию вы получаете на ютюбе и в 
+		 прочих злачных местах. Информация не задерживается в голове. Совсем. Но вам кажется, что задержалась. 
+		 Это такой большой обман мозга.
+		 Не нужно его обманывать, а нужно учиться и практиковаться. Тогда станете программистом или кем угодно. 
+		 Это универсальные советы для любого дела.</p>
+	  </article>
+        </div>
+      </section>
+      <!--END learning-->
       <!--BEGIN footer-->
       <footer class="footer">
         <div class="7">
